organizacion de repositorio

--- a/.gitignore
+++ b/.gitignore
@@ -125,3 +125,5 @@ Pruebas contornos Siemens/Muestra Contorno Siemens
 Statistics/results
 archivos_pruebas
 .vscode
+test_files
+archivo_salida.txt
